<?xml version="1.0" encoding="utf-8"?>
<com.lws.zhiqu.theme.ResideLayout android:id="@+id/resideLayout"
                                  xmlns:android="http://schemas.android.com/apk/res/android"
                                  xmlns:tools="http://schemas.android.com/tools"
                                  android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  tools:context=".ui.activity.MainActivity">
    <com.lws.zhiqu.theme.ColorRelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:background="?attr/menuBackground"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/top_menu"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:orientation="vertical">


          <de.hdodenhof.circleimageview.CircleImageView
              android:layout_width="83dp"
              android:layout_height="83dp"
              android:layout_marginLeft="25dp"
              android:layout_marginTop="50dp"
              android:id="@+id/avatar"
              android:src="@drawable/head"
              />
        </LinearLayout>



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_menu"
        android:layout_below="@+id/top_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:id="@+id/home"
                 android:padding="11dp">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_home_circle_white_24dp"
                     android:layout_marginLeft="23dp"
                     android:layout_marginRight="5dp"
                     />
                <TextView
                    style="@style/MenuStyle"
                    android:text="@string/home"/>
             </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ganhuo"
            android:padding="11dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_checkbox_multiple_marked_white_24dp"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="5dp"
                    />


                <TextView

                    style="@style/MenuStyle"
                    android:text="@string/ganhuo" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/movie"
            android:padding="11dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_youtube_play_white_24dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="5dp"
                />
            <TextView

                style="@style/MenuStyle"
                android:text="@string/movie" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/fuli"
            android:padding="11dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_folder_multiple_image_white_24dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="5dp"
                />
            <TextView

                style="@style/MenuStyle"
                android:text="@string/fuli" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/about"
            android:padding="11dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_white_24dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="5dp"
                />
            <TextView

                style="@style/MenuStyle"
                android:text="@string/about" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/theme"
            android:padding="11dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gauge_white_24dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="5dp"
                />

            <TextView

                style="@style/MenuStyle"
                android:text="@string/theme" />
            </LinearLayout>

          </LinearLayout>
       </ScrollView>

    </com.lws.zhiqu.theme.ColorRelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.lws.zhiqu.theme.ColorView
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?attr/colorPrimary"/>


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white" />

    </LinearLayout>
    </com.lws.zhiqu.theme.ResideLayout>